Unha versióna xa válida para presentar

--- a/transparencias.tex
+++ b/transparencias.tex
@@ -12,10 +12,27 @@
 
 \begin{frame}
 \titlepage
+\begin{center}
+\begin{columns}
+\begin{column}{0.33\textwidth}
+\begin{center}
+\includegraphics[width=50pt]{./img/bricolabs.png}
+\end{center}
+\end{column}
 
-licencia
-logo bricolabs
-logo gpul
+\begin{column}{0.33\textwidth}
+\begin{center}
+\includegraphics[width=50pt]{./img/gpul.png}
+\end{center}
+\end{column}
+
+\begin{column}{0.33\textwidth}
+\begin{center}
+\includegraphics[width=50pt]{./img/licencia.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{center}
 \end{frame}
 
 %% Indice de contidos
@@ -41,6 +58,12 @@ logo gpul
  \item Materializar
 \end{itemize}
 \end{itemize}
+
+\begin{center}
+\includegraphics[width=150pt]{./img/Ohw-logo.png}
+\end{center}
+
+
 \end{frame}
 
 % % % % % % % % % %
@@ -225,53 +248,90 @@ logo gpul
 
 % % % % % % % % % %
 \begin{frame}{Blink}
-
+\begin{description}
+ \item[Esquema:] Sen esquema
+ \item[Código:] Exemplos Básicos do Arduino IDE (Blink)
+\end{description}
 \end{frame}
 
 
 % % % % % % % % % %
-\begin{frame}{PWM e Blink}
+\begin{frame}{Lectura de potenciómetro}
+\begin{center}
+\includegraphics[width=165pt]{./img/lecturaPote.png}
+\end{center}
 
+\begin{description}
+\item[Código:] Exemplos Básicos do Arduino IDE (analogReadSerial)
+\end{description}
+\end{frame}
+
+% % % % % % % % % %
+\begin{frame}{Saídas}
+\begin{center}
+\includegraphics[width=170pt]{./img/esquemaPoteLed.png}
+\end{center}
+
+\begin{description}
+\item[Código:] Exemplos Básicos do Arduino IDE (Fade)
+\end{description}
+\end{frame}
+
+
+% % % % % % % % % %
+\begin{frame}{Interaccionando}
+\begin{description}
+\item[Esquema:] O do exemplo anterior
+\item[Código:] Fusión dos dous anteriores
+\end{description}
 \end{frame}
 
 % % % % % % % % % %
 \begin{frame}{Temperatura}
+\begin{center}
+\includegraphics[width=160pt]{./img/esquema_temperatura.png}
+\end{center}
+
+\begin{description}
+\item[Código:] Partimos do exemplos Básicos do Arduino IDE (analogReadSerial)
+\end{description}
+\end{frame}
+
+% % % % % % % % % %
+\begin{frame}{Alarma de Temperatura}
+\begin{center}
+\includegraphics[width=160pt]{./img/esquema_temperatura_alarma.png}
+\end{center}
+
+\begin{description}
+\item[Código:] Partimos do código anterior
+\end{description}
+\end{frame}
+
+% % % % % % % % % %
+\begin{frame}{Gardando datos en memoria EEPROM}
+\begin{description}
+\item[Esquema:] O do exemplo anterior
+\item[Código:] Partimos dos exemplos EEPROM do Arduino IDE e do código anterior
+\end{description}
+\end{frame}
+
+% % % % % % % % % %
+\begin{frame}{Música no Arduino}
 
 \end{frame}
 
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Máis cousas}
 
 
 % % % % % % % % % %
-\begin{frame}{Sensor ultrasons}
+\begin{frame}{Dúbidas, comentarios...}
 
 \end{frame}
 
-
-% % % % % % % % % %
-\begin{frame}{Imperial March}
-
-\end{frame}
-%
-% %% Bibliografia
-% \section{Bibliografía}
-% \begin{frame}
-%     \begin{thebibliography}{ZZ}
-%
-% 	\bibitem{torres}
-% 	    Torres, Lleida, Casas Pla. \\
-% 	    {\itshape Sistemas analógicos y digitales de televisión}. \\
-% 	    Edicions UPC, 1993.
-%
-% 	\bibitem{Herve}
-% 	    Benoi, Hervé. \\
-% 	    {\itshape Digital television MPEG-1, MPEG-2 and principles of the DVB system}. \\
-% 	    London: Arnold, 1997.
-%
-% 	\bibitem{wikipedia}
-% 	    Varios Autores. \\
-% 	    {\itshape Wikipedia}.
-%     \end{thebibliography}
-% \end{frame}
-%
-%
 \end{document}
